[package]
name = "metalbond_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
prost = "0.12"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = "0.7"
askama = { version = "0.12" }
futures = "0.3"
rand = "0.8"
ipnet = { version = "2", features = ["serde"] } # Enable serde feature
rtnetlink = "0.14"
netlink-packet-route = "0.19.0" # Downgraded to match rtnetlink dependency
netlink-packet-core = "0.7"
netlink-sys = "0.8"

# For netlink get_addr
nix = { version = "0.29", features = ["net", "feature"] }
async-trait = "0.1.88"
chrono = "0.4.40"


[build-dependencies]
prost-build = "0.12"
askama = "0.12" # Add askama here as well
